# mas_image_detection

./: .gitattributes  CMakeLists.txt  package.xml  setup.py
configs/: ssd_tensorflow_coco_kwargs.yml  ssd_tensorflow_face_kwargs.yml  ssd_tensorflow_image_detector_kwargs.yml  tf_models_face_classes.yml
models/: ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_coco14.pb  ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_robocup_symposium.pb  ssd_tensorflow_image_detector_kwargs.yml
ros/launch/: coco_image_test.launch  face_image_test.launch
ros/src/mas_image_detection/: __init__.py  ssd_tensorflow.py
